Mudanças em tamanho de fontes nos botões

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                         <div class="row">
                             <div class="col">
                                 <button type="button" class="btn btn-primary" id="btn-register-account"
-                                    onclick="verifyPassword()">Register Account</button>
+                                    onclick="verifyPassword()">
+                                    <span class="register-account">Register Account</span>
+                                </button>
                             </div>
                         </div>
                 </form>
@@ -75,10 +77,12 @@
                         <div class="col">
                             <div class="content-form-social-account">
                                 <button type="submit" class="btn btn-secondary" id="btn-register-google">
-                                    <i class="fa fa-google"></i> Register with Google
+                                    <i class="fa fa-google"></i> 
+                                    <span class="register-size">Register with Google</span>
                                 </button>
                                 <button type="submit" class="btn btn-primary" id="btn-register-facebook">
-                                    <i class="fa fa-facebook-f"></i> Register with Facebook
+                                    <i class="fa fa-facebook-f"></i> 
+                                    <span class="register-size">Register with Facebook</span>
                                 </button>
                             </div>
                         </div>
