Correções em ajustes visuais - Adição de fonte, bordas e tamanhos de letras

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <section id="password-link">
                     <div class="row">
                         <div class="col">
-                            <div class="content-form-link-forgot">
+                            <div class="link-forgot">
                                 <a href="#">Forgot Password?</a>
                             </div>
-                            <div class="content-form-link-login">
+                            <div class="link-login">
                                 <a href="#">Already have a account? Login!</a>
                             </div>
                         </div>
