Adição de comentários

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 
 <!-- 
-    Para este projeto foram utilizados:
+    For this project, we used: 
     * Framework: 
-        - Bootstrap: para estilizar o projeto; 
-        - Font Awesome: para inserir os icones (icone do Facebook e Google).
+        - Bootstrap: to style the project
+        - Font Awesome: to insert icons (Facebook and Google icon)
 
     * Libs: 
-        - Jquery: para realizar a formatação do campo de telefone/celular.
+        - Jquery: to formatting the phone/cell field.
 -->
 
 <head>
